--- a/03-AR-Database/04-ActiveRecord-Advanced/03-Sinatra/app/views/layout.erb
+++ b/03-AR-Database/04-ActiveRecord-Advanced/03-Sinatra/app/views/layout.erb
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>My First Sinatra App</title>
+    <title>Blabla Fake Truc</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/facebook.css">
+    <link rel="stylesheet" href="css/animation.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- Leave those next 4 lines if you care about users using IE8 -->
