--- a/04-Front-End/02-CSS/01-Header/blog/main.css
+++ b/04-Front-End/02-CSS/01-Header/blog/main.css
@@ -1,5 +1,42 @@
+body {
+  font-weight: 100;
+}
+
 .container {
   margin: 0 auto;
   width: 720px;
-	font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+}
+
+header ul
+{
+list-style:none;
+margin: 0;
+padding:0;
+text-align: center;
+}
+
+header a
+{
+display:block;
+width:100px;
+}
+
+header li
+{
+display:inline-block;
+}
+
+header{
+  border-bottom: 1px dotted grey;
+  padding: 10px;
+}
+
+footer{
+  border-top: 1px dotted grey;
+  padding: 10px;
+}
+
+h1{
+  text-align: center;
 }
