--- a/04-Front-End/03-Bootstrap/01-Grid/blog/main.css
+++ b/04-Front-End/03-Bootstrap/01-Grid/blog/main.css
@@ -1,5 +1,5 @@
 .container {
-  margin: 0 auto;  
+  margin: 0 auto;
   width: 940px;
 	font-family: 'Open Sans', sans-serif;
 }
@@ -7,7 +7,7 @@
 header ul
 {
 	list-style-type:none;
-	margin: 0;  
+	margin: 0;
 	padding:0;
 	text-align: center;
 }
@@ -37,4 +37,7 @@ h1{
 	text-align: center;
 	font-size: 50px;
 }
-
+/*
+div {
+  border: 1px solid red;
+}*/
