--- a/04-Front-End/05-HTTP-Ajax-2-days/01-wagon-race/css/style.css
+++ b/04-Front-End/05-HTTP-Ajax-2-days/01-wagon-race/css/style.css
@@ -27,7 +27,8 @@ body {
 
 #winner {
   border: 3px solid #7f8c8d;
-  border-radius: 5px;
+  /*border-radius: 5px;*/
+  border-radius: 250px;
   box-shadow: -10px 10px #7f8c8d;
   position: absolute;
   top: 22%;
